--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -66,19 +66,19 @@
                 <!-- Card 1 -->
                 <div class="card">
                     <img src="/pexels-hannah-nelson-390257-1065084-_1_-_1__1.webp" alt="Imagem 1" loading="lazy">
-                    <p>"Melhor churrascaria da região! Carnes suculentas, atendimento impecável e ambiente aconchegante. Recomendo a todos!"</p>
+                    <p>"Melhor restaurante italiano da região! Massas suculentas, atendimento impecável e ambiente aconchegante. Recomendo a todos!"</p>
                     <p>Emily R.</p>
                 </div>
                 <!-- Card 2 -->
                 <div class="card">
                     <img src="/pexels-justin-shaifer-501272-1222271-_1_-_1__1.webp" alt="Imagem 2" loading="lazy">
-                    <p>"Experiência incrível! A picanha estava perfeita, e o rodízio tem uma variedade que agrada todos os gostos. Voltarei sempre!"</p>
+                    <p>"Experiência incrível! A lasanha de espinafre estava perfeita, e o rodízio tem uma variedade que agrada todos os gostos. Voltarei sempre!"</p>
                     <p>Justin B.</p>
                 </div>
                 <!-- Card 3 -->
                 <div class="card">
                     <img src="/pexels-olly-733872-_1_-_1__1.webp" alt="Imagem 3" loading="lazy">
-                    <p>"Adoro o carinho e a atenção da equipe. Além das carnes deliciosas, o pão de alho e a farofa são de outro mundo!"</p>
+                    <p>"Adoro o carinho e a atenção da equipe. Além das massas deliciosas, o pão italiano e o nhoque são de outro mundo!"</p>
                     <p>Jennie T.</p>
                 </div>
                 <!-- Card 4 -->
@@ -90,13 +90,13 @@
                 <!-- Card 5 -->
                 <div class="card">
                     <img src="/pexels-justin-shaifer-501272-1222271-_1_-_1__1.webp" alt="Imagem 5" loading="lazy">
-                    <p>"A churrascaria que virou minha preferida! Sempre que quero um churrasco de qualidade, sei onde encontrar. Parabéns pela excelência!"</p>
+                    <p>"O restaurante que virou meu preferido! Sempre que quero uma massa de qualidade, sei onde encontrar. Parabéns pela excelência!"</p>
                     <p>Tiago B.</p>
                 </div>
                 <!-- Card 6 -->
                 <div class="card">
                     <img src="/pexels-olly-733872-_1_-_1__1.webp" alt="Imagem 6" loading="lazy">
-                    <p>"Atendimento nota 10 e carnes maravilhosas! O rodízio é completo, e os acompanhamentos são uma delícia. Recomendo de olhos fechados!"</p>
+                    <p>"Atendimento nota 10! O rodízio é completo, e os acompanhamentos são uma delícia. Recomendo de olhos fechados!"</p>
                     <p>Amanda T.</p>
                 </div>
             </div>
