--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="menu">
-        <h2>Conheça nosso cardápio</h2>
+        <h2>Cardápio</h2>
         <div class="grid">
             <div *ngFor="let item of menuItems" class="card">
                 <div class="card-img">
