--- a/src/app/cardapio/cardapio.component.scss
+++ b/src/app/cardapio/cardapio.component.scss
@@ -130,3 +130,119 @@ main {
         }
     }
 }
+
+.cart-modal-button {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 2dvh;
+
+    #cart-btn {
+        width: 40dvh;
+        height: 5dvh;
+        border: none;
+        border-radius: 2dvh;
+        background-color: $white;
+        color: $black;
+        transition: background-color 1s;
+    }
+
+    #cart-btn:hover {
+        background-color: $green;
+    }
+}
+
+.fullscreen {
+    position: fixed;
+    z-index: 20;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100dvh;
+    top: 0;
+    left: 0;
+    background-color: rgb(0 0 0 / 0.4);
+
+    .carrinho {
+        background-color: $black;
+        min-width: 90%;
+        border-radius: 2dvh;
+        text-align: center;
+        font-weight: bold;
+        margin: 1dvh 1dvh;
+
+        h2 {
+            margin-top: 1dvh;
+        }
+
+        #cart-items-container {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .cart-item {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            margin: 1dvh 1dvh;
+
+            .remove-from-cart-btn {
+                border: none;
+                transition: border .9s;
+                background-color: transparent;
+                transition: color 1s;
+            }
+
+            .remove-from-cart-btn:hover {
+                color: $green;
+            }
+        }
+
+        p {
+            font-weight: bold;
+        }
+
+        #address {
+            width: 90%;
+            padding: 1dvh 1dvh;
+            border: none;
+            border-radius: 1dvh;
+        }
+
+        #address-warn {
+            color: rgb(201, 62, 62);
+            font-weight: 500;
+            display: none;
+        }
+
+        div {
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 1dvh;
+            gap: 3dvh;
+
+            .close-modal-btn {
+                border: none;
+                transition: color 1s;
+                background-color: transparent;
+            }
+
+            .close-modal-btn:hover {
+                color: $red;
+            }
+
+            .checkout-btn {
+                background-color: transparent;
+                color: $white;
+                padding: 1dvh 1dvh;
+                border: none;
+                transition: color 1s;
+            }
+
+            .checkout-btn:hover {
+                color: $green;
+            }
+        }
+    }
+}
