--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,7 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-whatsapp"></i>
             <i class="fa-brands fa-facebook"></i>
+            <a href="/login">LOGIN</a>
         </div>
         <div class="nav-logo">
             <a href="/"><i class="fa-solid fa-pizza-slice"><span>DevPasta</span></i></a>
