--- a/src/app/cardapio/cardapio.component.scss
+++ b/src/app/cardapio/cardapio.component.scss
@@ -143,7 +143,7 @@ main {
         border: none;
         border-radius: 2dvh;
         background-color: $white;
-        color: $black;
+        color: $red;
         transition: background-color 1s;
     }
 
